--- a/index.html
+++ b/index.html
@@ -17,15 +17,7 @@
     defer>
   </script> 
 
-  <!-- Load components via WebComponents.waitFor -->
-  <script type="module">
-    window.WebComponents = window.WebComponents || { 
-      waitFor(cb){ addEventListener('WebComponentsReady', cb) }
-    } 
-    WebComponents.waitFor(async () => { 
-      import('./src/start-lit-element.js');
-    });
-  </script>
+  <script type="module" src="index.js"></script>
   
   <!-- Change stuff here for your app -->
   <meta name="description" content="start-lit-element">
